err/ant.err
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
***   File "./bin/miniterm.py", line 229
    except serial.SerialException, e:
                                 ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ant'...
Listing './lib/python3.5/site-packages/ant/core'...
Compiling './lib/python3.5/site-packages/ant/core/driver.py'...
***   File "./lib/python3.5/site-packages/ant/core/driver.py", line 120
    print '========== [{0}] =========='.format(title)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ant/core/event.py'...
***   File "./lib/python3.5/site-packages/ant/core/event.py", line 51
    except MessageError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ant/fs'...
Listing './lib/python3.5/site-packages/ant/plus'...
Listing './lib/python3.5/site-packages/ant-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial_py3k-2.5.egg-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
